TAG: radardbutilities-6-0-4-1
DATE: 04/28/2016
STAFF: lec
CHANGES: TR12069/postgres cleanup
1) convert to Git
2) add "db.setAutoTranslate"

TAG: radardbutilities-6-0-0-1
DATE: 07/22/2015
STAFF: lec 
CHANGES:
1) TR11750/postgres

TAG: radardbutilities-tr11750-MP
DATE: 07/01/2015
STAFF: lec
CHANGES:
1) merge branch name : radardbutilities-tr11750

TAG: radardbutilities-tr11750-BP (not made)
DATE:
STAFF: kstone
CHANGES:
1) branch name : radardbutilities-tr11750

TAG: radardbutilities-5-2-1-2
TAG: radardbutilities-5-2-1-1
DATE: 05/05/2015
STAFF: lec
CHANGES: 
TR12014/imageMGI.csh is obsolete
CloneLibrary.csh 
RIKENClones.csh 
NIAParentDaughterClones.csh

TAG: radardbutilities-tr11750-1
DATE: 05/04/15
STAFF: sc
CHANGES: TR11750 Infrastructure II
1) All changes made by Kevin thus far plus add db.commit to logFileToProcess.py
2) Branch point tag never created for 'radardbutilities-tr11750'ties-tr11750-1, 
   ayes this is the full tag name

TAG: radardbutilities-5-1-4-4
TAG: radardbutilities-5-1-4-3
DATE: 08/20/2013
STAFF: dbm
CHANGES: 
1) endJobStream.csh, getFilesToProcess.csh, getFilesToProcess2.csh,
   logFileToProcess.csh, logFileToProcessByDir.csh, logMirroredFiles.csh,
   logProcessedFile.csh, startJobStream.csh, Install: Remove "-x" option

TAG: radardbutilities-5-1-4-2
TAG: radardbutilities-5-1-4-1
DATE: 07/01/2013
STAFF: lec
CHANGES: from scrum-dog/Sybase 15 testing
- changed "-f -x" to "-fx" for solaris/linux
this command will work for both platforms

TAG: radardbutilities-4-4-1-2
DATE: 01/04/2012
STAFF: dbm
CHANGES: 
1) Added "-f" option to csh startup in config file

TAG: radardbutilities-4-4-1-1
DATE: 05/24/2011
STAFF: sc
CHANGES: 
1) logFileToProcessByDir.csh - fixed bug whereby only one file in the directory
   was ever getting processed.

TAG: radardbutilities-4-3-3-1
DATE: 03/11/2010
STAFF: dbm
CHANGES: merge tr10086 branch to trunk

TAG: radardbutilities-tr10086-1
DATE: 02/19/2010
STAFF: dbm
CHANGES: